# fischer_gallery

./: .gitignore  README.md  docker-compose.yml  example.http  pyproject.toml
api/: main.py
api/datamodels/: api_inputs.py  api_responses.py  token.py
api/middlewares/: db_handlers.py  jwt_auth.py  query_builder.py
api/misc/: custom_logger.py  date_converter.py  file_handler.py  json_converter.py
api/routes/: authentication.py  database.py  file_serving.py  stocks.py
db/scripts/: mongo-init.js
frontend/: .gitignore  package.json  webpack.config.js
frontend/src/: index.tsx  route.tsx
frontend/src/public/: index.html
frontend/src/routes/: basic.tsx  login.tsx
nginx/: nginx.conf.tpl
