[tool.poetry]
name = "fischer-gallery"
version = "0.1.0"
description = ""
authors = ["Peter", "Laci"]
readme = "README.md"

packages = [
    { include = "api" }
]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.29.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pyjwt = "^2.6.0"
python-dotenv = "^1.0.1"
python-multipart = "0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api_main = 'api.main:run'
jwt_main = 'api.fast_jwt_auth:run'
